styles.css
/*
  1. Use a more-intuitive box-sizing model.
*/
*, *::before, *::after {
    box-sizing: border-box;
  }
  /*
    2. Remove default margin
  */
  * {
    margin: 0;
  }
  /*
    Typographic tweaks!
    3. Add accessible line-height
    4. Improve text rendering
  */
  body {
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
    height: 100%;
    font-family: Helvetica, sans-serif;
    letter-spacing: -0.75px;
  }
  /*
    5. Improve media defaults
  */
  img, picture, video, canvas, svg {
    display: block;
    max-width: 100%;
  }
  /*
    6. Remove built-in form typography styles
  */
  input, button, textarea, select {
    font: inherit;
  }
  /*
    7. Avoid text overflows
  */
  p, h1, h2, h3, h4, h5, h6 {
    overflow-wrap: break-word;
  }
  /*
    8. Create a root stacking context
  */
  #root, #__next {
    isolation: isolate;
  }



 /* END OF CSS RESET */
 
 @font-face {
    font-family: 'mariofont';
    src: url('fonts/mariofont/supermario256-webfont.woff2') format('woff2'),
         url('fonts/mariofont/supermario256-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

html {
    height: 100%;
}

.overallcontainer {
    display: flex;
    align-items: stretch;
    height: 100%
}

.container1 {
    width: 25%;
    background: url("images/mario.jpg");
    background-repeat: no-repeat;
    background-size: 100% 100%;
}

.container2 {
    width: 75%;
}

.odin {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    margin-top: 35%;
    background-color: rgba(0, 0, 0, 25%)
}

.odintext {
    font-family:'mariofont';
    color: white;
    font-size: 5em;
    margin-left: 10px;
}

img {
    width: 15%;
}
.infoMessageContainer {
    height: 33%;
    background-color: rgb(248, 245, 245);
}
.infoMessage {
    max-width: 1000px;
    height: 100%;
    position: relative;
}

.formContainer {
    height: 33%;
    box-shadow: 0 10px 10px -10px rgb(150, 146, 146);
    position: relative;
    z-index: 1000;
}

.form {
    max-width: 1000px;
    height: 100%;
}

form {
    padding-left: 3%;
    padding-right: 3%;
    padding-bottom: 3%;
    display: flex;
    gap: 15%;
}

.firstFormHalf {
    display: flex;
    flex-direction: column;
}
.secondFormHalf {
    display: flex;
    flex-direction: column;
}

label {
    color: rgb(80, 79, 79);
    font-weight: bold;
    letter-spacing: 1px;
    font-size: .8em;
}

input {
    width: 300px;
    margin-bottom: 10px;
    border-color: #E5E7EB;
    border-radius: 3px;
    border-width: .5px;
    border-style: solid;
}



.loginContainer {
    height: 34%;
    background-color: rgb(248, 245, 245);
}

.login {
    max-width: 1000px;
    height: 100%;
}

button {
    color: white;
    background-color: rgb(105, 105, 231);
    border-radius: 5px;
    margin: 3%;
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 40px;
    padding-right: 40px;
    font-weight: bold;
    border: none;
    cursor: pointer;
}

.account {
    margin-left: 3%;
    margin-right: 3%;
    letter-spacing: -.5px;
}

span {
    font-weight: bold;
    letter-spacing: -.5px;
}

span.fakeLogin {
    color: rgb(105, 105, 231);
    cursor: pointer;
}

.infoText {
    font-weight: bold;
    font-size: 1.5em;
    padding-left: 3%;
    padding-right: 3%;
}

.firstSentence {
    position: absolute;
    bottom: 100px;
}

.secondSentence {
    position: absolute;
    bottom: 20px;
}

.secondContainer {
    padding-top: 3%;
    padding-bottom: 3%;
}

input:focus {
    outline: none;
    border-color: rgb(166, 166, 235);
    box-shadow: .25px .25px 2px .25px black;
}

input:invalid {
    border-color: red;
}

input + span {
    position: relative;
}

input:invalid + span.password::after {
    position: absolute;
    content:"Min. characters required: 8";
    color: red;
    font-size: 0.75em;
    top: -55px;
    left: 155px;
}

input:invalid + span.confirm::after {
    position: absolute;
    content:"Password does not match";
    color: red;
    font-size: 0.75em;
    top: -55px;
    left: 162px;
}

input:invalid + span.emailValidation::after {
    position: absolute;
    content:"Email not in correct format";
    color: red;
    font-size: 0.75em;
    top: -55px;
    left: 155px;
}

input:invalid + span.phoneValidation::after {
    position: absolute;
    content:"Phone # not in correct format";
    color: red;
    font-size: 0.75em;
    top: -55px;
    left: 145px;
}

